# Probabilistic-Market-Predictor

./: LICENSE  README.md  pyproject.toml
Abstract/: market_test.py  test.ipynb
Data/: AAPL_Stock_Info.csv  Log_Avg_Monthly_Returns.csv  Log_Simple_Returns.csv  Spy_simple_returns.csv
Data Cleaning/: DataNB.ipynb  Plotting.py  SegmentData.py  clean_data.py  returns.py
Linear Regression/: lrNB.ipynb  lrTotalReturn.py
Probability/: lrNB.ipynb  probfunc.py
